src/main/webapp/static/css/style.css
/*
Theme inspired from kuler scheme : http://kuler.adobe.com/#themeID/617195
	2F2F32	6E6D65 	C9BB9B	FFD8A1	FF7351
*/
@import url("reset.css");

body {
	background: #6E6D65;
	font-family: Helvetica;
	font-size: 14px;
}

.body {
	clear: both;
	margin: 0 auto;
	width: 800px;
	padding: 0px;
}

a {
	color: #FF7351
}

/*** header */
#top {
	background: url('../img/top_bg.png') #C9BB9B repeat-x;
	height: 200px;
	color: #2F2F32;
}

#wooki {
	font-family: Georgia;
	width: 320px;
	padding: 10px 20px 0px 20px;
	display: block;
	float: left;
}

#wooki h1 {
	font-size: 76px;
	font-weight: normal;
	line-height: 100px;
}

#wooki h1 img {
	vertical-align: middle;
}

#wooki h2 {
	font-size: 30px;
	font-weight: normal;
	text-align: center;
}

#quick-nav {
	padding-top: 10px;
	float: right;
}

#quick-nav ul {
	color: #6E6D65;
	list-style: none;
}

#quick-nav	li {
	display: inline;
	padding: 0px 10px;
	border-left: 1px solid #6E6D65;
}

#quick-nav li:first-child {
	border-left: none;
}

#search-box {
	font-size: 18px;
	float: right;
	padding-top: 40px;
	width: 380px;
	clear: right;
	color: #6E6D65;
}

#search-box label {
	padding-left: 10px;
}

#search-box #search-field {
	width: 300px;
	border-top-left-radius: 10px;
	-moz-border-radius-topleft: 10px;
	-webkit-border-top-left-radius: 10px;
	border-bottom-left-radius: 10px;
	-moz-border-radius-bottomleft: 10px;
	-webkit-border-bottom-left-radius: 10px;
}

#search-box #search-field:focus {
	border: 1px solid #FF7351;
}

#search-box #submit-search {
	text-decoration: none;
	background: #6E6D65;
	color: #FFD8A1;
	border-top-right-radius: 10px;
	-moz-border-radius-topright: 10px;
	-webkit-border-top-right-radius: 10px;
	border-bottom-right-radius: 10px;
	-moz-border-radius-bottomright: 10px;
	-webkit-border-bottom-right-radius: 10px;
}

#search-box .form-field {
	font-family: Helvetica;
	font-size: 18px;
	padding: 8px;
	border: 1px solid #6E6D65;
}

/*** content */
#content {
	background: #FFD8A1;
	clear: both;
}

.clearer {
	clear: both
}

#presentation {
	background: #2F2F32;
	color: white;
	font-family: Georgia;
	font-size: 24px;
	width: 400px;
	float: left;
	margin: 10px 8px 20px 10px;
	border-radius: 10px;
	-moz-border-radius: 10px;
	-webkit-border-radius: 10px;
}

#presentation p {
	padding: 20px;
	font-weight: normal;
}

#presentation #signup {
	background: #FF7351;
	margin: 20px;
	text-align: center;
	font-size: 28px;
	font-family: Helvetica;
	border-radius: 10px;
	-moz-border-radius: 10px;
	-webkit-border-radius: 10px;
}

#presentation #signup a {
	color: #FFD8A1;
	text-decoration: none;
}

#presentation #signup em {
	font-size: 20px;
	font-style: normal;
}

#author-feed {
	background: white;
	margin: 10px;
	padding: 10px;
	width: 340px;
	height: 300px;
	float: left;
	border: 1px solid #C9BB9B;
	border-radius: 10px;
	-moz-border-radius: 10px;
	-webkit-border-radius: 10px;
}

#author-feed h1 {
	font-size: 18px;
}

#author-feed li {
	margin: 10px 0px;
}

.activity-feed {
	background: white;
	margin: 10px;
	padding: 10px;
	width: 340px;
	float: right;
	border: 1px solid #C9BB9B;
	border-radius: 10px;
	-moz-border-radius: 10px;
	-webkit-border-radius: 10px;
}

.activity-feed h1 {
	font-size: 18px;
}

.activity-feed li {
	margin: 10px 0px;
}

.activity-feed em {
	color: #6E6D65
}

/*** bottom */
#bottom {
	color: white;
	clear: both;
}

.footer-nav {
	width: 200px;
	float: left;
	padding: 10px 20px;
}

/*** book layout*/
#book {
	padding: 10px;
}

#book h1 a,#book h2 a,#book h3 a,#book h4 a,#book h5 a,#book h6 a {
	color: #2F2F32;
	text-decoration: none;
}

#book h3, #book h4, #book h5, #book h6 {
	padding-top:10px;
	padding-bottom:10px;
}

#book h1 {
	font-family: Georgia;
	font-size: 30px;
	margin-bottom: 20px;
}

#book h2 {
	font-family: Georgia;
	font-size: 28px;
}

#book h3 {
	font-size: 22px;
}

#book #wrapper {
	background: #6E6D65;
	padding-left: 40px;
	border: 1px solid #6E6D65;
}

#book article {
	background: white;
	padding: 10px;
	border-radius: 10px;
	-moz-border-radius: 10px;
	-webkit-border-radius: 10px;
}

#book #authors,#book #published {
	text-align: center;
	padding: 0px 0px 10px 0px;
}

#book article header {
	padding-bottom: 10px;
}

#book #chapters-list li {
	padding: 10px 0px;
	clear: both;
}

#book #chapters-list h3 {
	width: 500px;
	float: left;
	padding-left: 20px;
	line-height:25px;
}

#book #chapters-list p {
	text-align: right;
	color: #6E6D65;
	padding:0px;
	line-height:25px;
}

#book p {
	padding: 10px 10px;
}

#book #book-nav {
	color: #C9BB9B;
	padding: 10px;
}

#book #book-nav #nav-left {
	float: left;
}

#book #book-nav #nav-right {
	float: right;
}

#book quote, #book blockquote {
	font-family: Georgia;
	font-style: italic;
}

#book blockquote, #book pre {
	margin-left:40px;
	padding-left:10px;
	border-left:1px solid black; 
}

#book pre {
	font-size:12px;
}

#book div.commentable:hover .comment-accessor {
	visibility:visible;
}

#book .comment-accessor {
	position:absolute;
	width:50px;
	visibility:hidden;
	display:block;
}

#book #comments a{
	color: #FFD8A1;
	font-weight: bold;
	text-decoration: none;
}

#book .comment-accessor .no-comment {
	background:url("../img/bubble_inactive.png") no-repeat center;
	line-height: 25px;
	height: 25px;
	width: 40px;
	text-align:center;
}

#book .comment-accessor .commented {
	background:url("../img/bubble_active.png") no-repeat center;
	line-height: 25px;
	height: 25px;
	width: 40px;
	text-align:center;
}

/*** Form elements */
.wookiForm {
	margin: 0 auto;
	padding: 14px;
}

.wookiForm form {
	background: white;
	padding: 10px;
	border: 1px solid #C9BB9B;
	border-radius: 10px;
	float: left;
	margin: 10px 8px 20px 10px;
	-moz-border-radius: 10px;
	-webkit-border-radius: 10px;
	margin: 10px 8px 20px 10px;
}

.wookiForm h1 {
	font-size: 18px;
}

.wookiForm fieldset {
	width: 100%;
	padding: 5px;
}

.wookiForm small {
	margin-left: 1em;
	font-size: 12px;
}

.wookiForm fieldset ol {
	padding: 1em 1em 0 1em;
	list-style: none;
}

.wookiForm fieldset li {
	float: left;
	clear: left;
	width: 100%;
	padding-bottom: 1em;
}

.wookiForm p {
	padding: 10px;
}

.wookiForm #submit {
	background: #FF7351;
	margin: 20px;
	text-align: center;
	font-size: 28px;
	font-family: Helvetica;
	border-radius: 10px;
	-moz-border-radius: 10px;
	-webkit-border-radius: 10px;
}

.wookiForm a {
	color: #FFD8A1;
	text-decoration: none;
}

.wookiForm fieldset.rememberMe {
	float: none;
	width: auto;
	border: 0 none #FFF;
	padding-left: 12em;
}

.wookiForm label {
	float: left;
	width: 10em;
	margin-right: 1em;
	text-align: right;
}

.wooki-form-error {
	background-color: #FF7351;
	font-size: 20px;
	margin-bottom: 10px;
	padding: 10px;
	text-align: center;
}

#signin-signup {
	background: #2F2F32;
	color: white;
	font-family: Georgia;
	font-size: 24px;
	width: 300px;
	float: right;
	margin: 10px 8px 20px 10px;
	border-radius: 10px;
	-moz-border-radius: 10px;
	-webkit-border-radius: 10px;
}

#signin-signup p {
	padding: 20px;
	font-weight: normal;
}

#signin-signup #signup {
	background: #FF7351;
	margin: 20px;
	text-align: center;
	font-size: 28px;
	font-family: Helvetica;
	border-radius: 10px;
	-moz-border-radius: 10px;
	-webkit-border-radius: 10px;
}

#signin-signup #signup a {
	color: #FFD8A1;
	text-decoration: none;
}

#signin-signup #signup em {
	font-size: 20px;
	font-style: normal;
}

